<resources>
    <string name="app_name">ForeverToDo</string>

    <!-- Task strings -->
    <string name="new_task">New ToDo</string>
    <string name="task_name">Task Name</string>
    <string name="due_date">Due Date</string>
    <string name="select_date">Select Date...</string>
    <string name="due_time">Time</string>
    <string name="select_time">Select Time...</string>
    <string name="description">Description</string>
    <string name="priority_level">Priority Level</string>
    <string name="category_box">Category</string>
    <string name="notif_string">Notifications</string>
    <string name="notif_format">%1$d/%2$d/%3$d    %4$d:%5$d %1$s</string>
    <string name="notif_temp">12/01/2018    08:00 AM</string>
    <string name="alarm_string">Alarm</string>
    <string name="alarm_format">%4$d:%5$d %1$s</string>
    <string name="alarm_temp">09:00 AM</string>
    <string name="done_button">Done</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete_button">Delete</string>
    <string name="save_button">Save</string>

    <!-- Category items -->
    <string-array name="task_categories">
        <item>School</item>
        <item>Work</item>
        <item>Social</item>
        <item>Gaming Club</item>
    </string-array>

    <!-- Menu Popup Items -->
    <string name="sortby">Sort By</string>
    <string name="select_option">Select an option</string>

    <string-array name="sortby_list">
        <item>Due Date</item>
        <item>Priority</item>
        <item>Category</item>
    </string-array>

    <!-- Testing Strings -->
    <string name="task_list">This is the task list page!</string>
    <string name="to_task">To task page</string>
    <string name="task_page">This is the individual task page!</string>
    <string name="to_history">To history</string>
    <string name="completed_text">Completed Tasks!</string>
    <string name="graph_text">This picture will eventually become a graph that is generated based on the number of tasks completed in the last seven days.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="to_profile">To profile</string>

    <!-- Navigation Strings -->
    <string name="nav_home">ToDo</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_history">History</string>

</resources>
