<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="@string/task_name"
            />
        <EditText
            android:id="@+id/task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:layout_marginTop="15dp"
            android:text="@string/due_date"/>
        <EditText
            android:id="@+id/task_due_date"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/select_date"
            android:padding="10dp"
            android:background="#efefef"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:layout_marginTop="15dp"
            android:text="@string/due_time"/>
        <EditText
            android:id="@+id/task_due_time"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/select_time"
            android:padding="10dp"
            android:background="#efefef"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:layout_marginTop="15dp"
            android:text="@string/description"/>
        <EditText
            android:id="@+id/task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/edit_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:layout_marginTop="15dp"
            android:text="@string/priority_level"/>
        <SeekBar
            android:id="@+id/task_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="10dp"
            android:maxHeight="10dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:max="10"
            android:progress="5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:layout_marginTop="15dp"
            android:text="@string/category_box"/>
        <Spinner
            android:id="@+id/task_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/task_categories"/>

        <Button
            android:id="@+id/completed_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/save_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/green"
                android:text="@string/save_button" />

            <Button
                android:id="@+id/delete_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/red"
                android:text="@string/delete_button"
                />

        </LinearLayout>

        <Button
            android:id="@+id/cancel_button"
            android:text="@string/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</ScrollView>